# 3d-scene-viewer

./: .gitmodules  CMakeLists.txt  main.cpp
includes/command/: Command.h  ExitCommand.h
includes/math/: mat4.h  vec3.h  vec4.h
includes/mesh/: Mesh.h
includes/render/: Camera.h  Window.h
includes/shader/: shader.h
includes/utils/: ModelLoader.h
src/command/: ExitCommand.cpp
src/mesh/: Mesh.cpp
src/render/: Camera.cpp  Window.cpp  shader.cpp
src/shader/: shader.cpp
src/utils/: ModelLoader.cpp
